경매 시작가 판매 수수료 테이블 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -168,22 +168,16 @@
 										<table>
 											<thead>
 												<tr>
-													<td style="text-align: center;">결제수단</td>
 													<td style="text-align: center;">판매수수료</td>
-													<td style="text-align: center;">구매수수료</td>
+													<td style="text-align: center;">거래대금정산</td>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
-													<td>가상계좌</td>
 													<td>5%</td>
-													<td>10%</td>
+													<td>구매자가 거래 대금을 결제 완료한 <br>시점으로 14일 이내 지급(영업일 기준)</td>
 												</tr>
-												<tr>
-													<td>신용카드</td>
-													<td>6%</td>
-													<td>11%</td>
-												</tr>
+											
 											</tbody>
 										</table>
 										<p>※ 부가세 및 이벤트 할인 미적용</p>
@@ -192,7 +186,7 @@
 										
 							</div>
 							<!--0831_판매수수료-->
-						
+						   
 						 
 							<div class="med-box radio-2">
 								<div id="bidOrSale2">
@@ -205,7 +199,13 @@
 									<input type="text" class="input-1" id="dealStrtPrcA1" placeholder="경매 시작가를 입력해주세요" onkeyup="comma(this)" onblur="dealStrtPrcCal(this)" style="font-size:15px;"/>
 									<input type="text" class="input-1" id="dealStrtPrcS" placeholder="판매가를 입력해주세요" onkeyup="comma(this)" onblur="dealStrtPrcCal(this)" style="font-size:15px; display:none;"/>
 								</div>
+								<p class="table-p">
+									※ 판매 금액은 한국 원화(KRW) 기준으로 작성해 주세요.
+								</p>
 							</div>
+							
+							
+							
 						</div>
 						
 					
