판매 수수료 워딩 변경

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -163,7 +163,7 @@
 												</div>
 											</div>
 											<div class="bat-box3 mg_t30">
-												<span class="c-reds2">※ 9월의 혜택 : 판매 수수로 50% 할인(~9/30)</span>
+												<span class="c-reds2">※ 9월의 혜택 : 판매 수수료 50% 할인(~9/30)</span>
 											</div>
 											<!-- <div class="bat-box3 mg_t30">
 												<span class="c-reds">※ 오픈 이벤트 (거래 수수료 할인)</span>
