--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -1592,7 +1592,7 @@ columns2 figure {
 
 .con-btn{
     text-align: center;
-    margin: 75px 0;
+    margin-bottom: 75px;
 }
 .con-btn a{}
 .con-btn a img{}
@@ -5938,3 +5938,61 @@ position: relative;background-color: #fbfbfb;}
     word-break: keep-all;
     text-align:center;
 }
+
+/* 0823 통합 나의 작품*/
+.beag-bnal{width: 100%;margin: 0 0 25px 0;text-align: center;}
+.beag-bnal .beag-bnal-box{width: auto;margin: 0 auto;text-align: center;display: inline-block;vertical-align: middle;}
+.beag-bnal .beag-bnal-box .bnal-btn{padding: 5px 20px 7px 20px; font-size: 22px; background: #eee; border-radius: 12px; margin: 0 5px;}
+.beag-bnal .beag-bnal-box .bnal-btn.active{background: #e9625c; color: #fff;}
+
+.toogbtn{ text-align: center; padding: 65px 0 0 0;}
+.toogbtn h3{ width: auto; display: inline-block; position: relative; padding: 13px; cursor: pointer;}
+.toogbtn h3:after{content:'▲';position: absolute;top: -32px;left: 50%;transform: translateX(-50%);background-color: #e9625c;border-radius: 50%;color: #fff;font-size: 19px;padding: 8px;}
+.toogbtn h3.toff:after{content:'▼';position: absolute;top: -32px;left: 50%;transform: translateX(-50%);background-color: #e9625c;border-radius: 50%;color: #fff;font-size: 19px;padding: 8px;}
+.toogbtn p{}
+.trtoggle{ display: none;}
+.trtoggle.trShow{}
+.textoog{}
+.textoog:after{content:'지금 입력하기';}
+.textoog.active:after{content:'나중에 입력하기';}
+
+
+.myd-box-4{width: 100%; max-width: 750px; margin: 150px auto 50px auto;}
+.work-drp{ display: inline-block; vertical-align: middle; position: relative;}
+.work-drp .work-div{ margin-left: 15px; cursor: pointer;}
+.work-drp .work-div span{ font-size: 14px; display: inline-block; vertical-align: middle; padding-right: 5px; font-weight: 500;}
+.work-drp .work-div img{ vertical-align: middle;}
+
+.work-hov{display:none; position: absolute; top: 51px; left: 50%; width: 260px; background-color: #e9625c; padding: 5px; text-align: left;	z-index: 2;	transform: translateX(-50%);}
+.work-hov ul{ clear: both; border-left: #e8e8e8 1px solid; border-top: #e8e8e8 1px solid;}
+.work-hov ul li{ display: inline-block; width: 50%; text-align: center; float: left; background: #fff;}
+.work-hov ul li a{ display: block; padding: 8px 0; border-bottom: #e8e8e8 1px solid; border-right: #e8e8e8 1px solid;}
+.work-hov ul li a img{ vertical-align: middle;}
+.work-hov ul li a span{ display: inline-block; vertical-align: middle; color: #e9625c; font-weight: 600; font-size: 14px;}
+.work-hov ul:after{content:'';display: block;clear: both;}
+.work-hov ul li:last-child:after{content:'';display: block;clear: both;}
+.work-hov:after{content:'';background-image: url(../img/banci.png);position: absolute;left: 50%;top: -17px;background-size: 100%;width: 41px;height: 22px;transform: translateX(-50%);background-repeat: no-repeat;}
+.work-hov.active{display:block;}
+
+.work-drp-2{}
+.work-drp-2:after{content:'';}
+.work-drp-2 .wd-box{ max-width: 750px; width: 100%; margin: 0 auto; background: #e9625c; border-top: #eee 2px solid; padding: 20px 0; border-radius: 11px; margin-top: 14px;}
+.work-drp-2 .wd-box .wd-btns{ padding: 3px 16px 5px 16px; font-size: 19px; background: #fff; border-radius: 12px; margin: 0 5px; min-width: 120px;}
+.dp_n{display:none;}
+.wd-btns{display:none;}
+.wd-btns.active{display:inline-block;}
+.wdb-all{display:inline-block}
+
+.chediv{}
+.chediv .check-div{display:block;}
+.chediv .check-div img{ width: 65px;}
+
+.iv-span:after{content:'공개';}
+.iv-span.active:after{content:'비공개';}
+.item-view{ position: absolute; right: 15px; bottom: 15px; z-index: 999999;}
+.item-view button .iv-span{ font-size: 16px; z-index: 9999999; background: #fff; padding: 3px 10px; border-radius: 7px;}
+
+.mana-check{position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 999999; padding: 0;width: 100%; height: 100%;}
+.mana-check input[type="checkbox"] + label span{background:none;}
+.mana-check input[type="checkbox"]:checked + label span{background: url(../img/cehck-icon.png); width: 50px; height: 50px; background-size: 100%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);margin: 0;}
+.mana-check input[type="checkbox"] + label{width: 100%; height: 100%;}
