--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -535,8 +535,8 @@ $(function(){
 	const urlParam = url.searchParams;
 	console.log("MbrSqVal :"+sMbrSqVal);
 	if(sMbrSqVal != urlParam.get('mbrSq')){
-		//location.href="/main";
-		 modalAlertShow("잘못된 접근입니다. 메인페이지로 이동합니다.", "main");
+		location.href="/main";
+		modalAlertShow("잘못된 접근입니다. 메인페이지로 이동합니다.", "main");
 		return;
 	} else {
 		$(".con-right").show();
@@ -642,8 +642,8 @@ jQuery(document).ready(function() {
  * 남은 시간 초 단위로 불러온다 
  */
 var dealCount = setInterval(function(){
-	var endngDate = result.dealInfo.dealEndngDate.replaceAll(".", "-");
-	var dday = new Date(endngDate).getTime();
+	//var endngDate = result.dealInfo.dealEndngDate.replaceAll(".", "-");
+	var dday = new Date(result.dealInfo.dealEndngDateTime).getTime();
 	var today = new Date().getTime();
 	var element = document.getElementById("dealCount");
 	//거래 남은 시간이 현재 시간보다 작으면
