--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -554,16 +554,16 @@ function myDealSearchList(){
 	    				myDealListHtml += '				<dd>'+ myDealList[i].bidCnt +'</dd>';
 	    				if(myDealList[i].maxBidPrc != null && myDealList[i].maxBidPrc != "" && myDealList[i].buyMbrSq == sMbrSqVal){ //예상 수수료 구매자
 		    				myDealListHtml += '				<dt>예상 수수료</dt>';
-		    				var fee = Math.round(myDealList[i].maxBidPrc.replaceAll(/,/g, '') * 0.06); //구매 수수료 6프로
-		    				var feeTax = fee * 0.10;
+		    				var fee = Math.round(myDealList[i].maxBidPrc.replaceAll(/,/g, '') * 0.1); //구매 수수료 10프로
+		    				var feeTax = Math.round(fee * 0.10);
 		    				myDealListHtml += '				<dd>'+formatComma(fee+feeTax)+' KRW</dd>';
 		    				//myDealListHtml += '				<dt>예상배송비</dt>';
 		    				//myDealListHtml += '				<dd></dd>';
 	    				}
 	    				if(myDealList[i].maxBidPrc != null && myDealList[i].maxBidPrc != "" && myDealList[i].sellMbrSq == sMbrSqVal){ //예상 수수료 구매자
 		    				myDealListHtml += '				<dt>예상 수수료</dt>';
-		    				var fee = Math.round(myDealList[i].maxBidPrc.replaceAll(/,/g, '') * 0.03); //판매 수수료 3프로
-		    				var feeTax = fee * 0.10;
+		    				var fee = Math.round(myDealList[i].maxBidPrc.replaceAll(/,/g, '') * 0.05); //판매 수수료 5프로
+		    				var feeTax = Math.round(fee * 0.10);
 		    				myDealListHtml += '				<dd>'+formatComma(fee+feeTax)+' KRW</dd>';
 		    				//myDealListHtml += '				<dt>예상배송비</dt>';
 		    				//myDealListHtml += '				<dd></dd>';
@@ -584,16 +584,16 @@ function myDealSearchList(){
         				}
         				if(myDealList[i].dealFinalPrc != null && myDealList[i].dealFinalPrc != "" && myDealList[i].buyMbrSq == sMbrSqVal){ //예상 수수료 구매자
 		    				myDealListHtml += '				<dt>예상 수수료</dt>';
-		    				var fee = Math.round(myDealList[i].dealFinalPrc.replaceAll(/,/g, '') * 0.06); //구매 수수료 6프로
-		    				var feeTax = fee * 0.10;
+		    				var fee = Math.round(myDealList[i].dealFinalPrc.replaceAll(/,/g, '') * 0.1); //구매 수수료 10프로
+		    				var feeTax = Math.round(fee * 0.10);
 		    				myDealListHtml += '				<dd>'+formatComma(fee+feeTax)+' KRW</dd>';
 		    				//myDealListHtml += '				<dt>예상배송비</dt>';
 		    				//myDealListHtml += '				<dd></dd>';
 	    				}
 	    				if(myDealList[i].dealFinalPrc != null && myDealList[i].dealFinalPrc != "" && myDealList[i].sellMbrSq == sMbrSqVal){ //예상 수수료 구매자
 		    				myDealListHtml += '				<dt>예상 수수료</dt>';
-		    				var fee = Math.round(myDealList[i].dealFinalPrc.replaceAll(/,/g, '') * 0.03); //판매 수수료 3프로
-		    				var feeTax = fee * 0.10;
+		    				var fee = Math.round(myDealList[i].dealFinalPrc.replaceAll(/,/g, '') * 0.05); //판매 수수료 5프로
+		    				var feeTax = Math.round(fee * 0.10);
 		    				myDealListHtml += '				<dd>'+formatComma(fee+feeTax)+' KRW</dd>';
 		    				//myDealListHtml += '				<dt>예상배송비</dt>';
 		    				//myDealListHtml += '				<dd></dd>';
