--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -564,7 +564,7 @@
 					</li> -->
 					<div class="drop-btnb">
 						
-						<span style="color:red;font-weight: bold;">※ 필터를 이용하여 작품을 검색해 보세요.</span>
+						<span style="color:red;font-weight: bold;font-size:15px;">※ 필터를 이용하여 작품을 검색해 보세요.</span>
 						<br><br>
                         <button type="button" class="dbtn-1" onclick="dealSearch()">선택</button>
                         <button type="button" class="dbtn-2" onclick="searchOptionReset()">reset</button>
@@ -579,9 +579,11 @@
 <script type="text/javascript"> 
 	
 	if(isMobile == true){
-		$("#r3").prop("checked", false);   //체크해제하기
+		$("#r3").prop("checked", false);  //체크해제하기
+		$("#s5").prop("checked", true);   //체크하기
 	} else {
 		$("#r3").prop("checked", true);   //체크하기
+		$("#s5").prop("checked", false);  //체크해제하기
 	}
 	
 	
