응찰 유의사항 팝업 노출 영역 변경

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -610,11 +610,12 @@
 													작품 판매에 대한 수수료가 부과됩니다.
 													<button id="btn_toggle"><img src="resources/img/ba/me-icon.png"></button>
 												</p>
+												
 											</div>
 										</label>
 										
 										<!--0830_판매수수료-->
-										<div id="Toggle" style="display:none">
+										<div id="Toggle" style="display:none;">
 											<div class="toggle_box1">
 												<div class="toggle_bar1">판매수수료</div>
 												<div class="toggle_close" id="toggle_close"><img src="resources/img/ba/icon-end_1.png"></div>
@@ -1791,7 +1792,7 @@ function setTodayTime(){
 //0830 토글팝업
 $(function (){
 	$("#btn_toggle").click(function (){
-	$("#Toggle").toggle();
+		$("#Toggle").toggle();
 	});
 });
 
