--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -6456,6 +6456,33 @@ p.dib{display:inline-block !important;}
 
 .hiddenMobile {display:none;}
 
+#Toggle {
+    position: absolute;
+    top:-10px;
+    left:0px;
+    background: #fff;
+    border:1px solid #eaeaea;
+    z-index: 999;
+    box-shadow: 0 3px 5px rgb(0 0 0 / 20%);
+}
+
+#Toggle .toggle_box1 {
+    background: #e9625c;
+    padding:15px;
+}
+
+#Toggle table {
+    margin:15px;
+}
+#Toggle table tr td {
+    border:1px solid #cfcfcf;
+    padding:10px;
+    font-size:13px;
+    color:#999;
+    word-break: keep-all;
+    text-align:center;
+}
+
 .Toggle {
     position: absolute;
     background: #fff;
