--- a/src/main/resources/templates/thymeleaf/result_work.html
+++ b/src/main/resources/templates/thymeleaf/result_work.html
@@ -437,7 +437,7 @@
 											</th:block>
 											
 											<th:block th:if="${workList.dealTypCd.toString().equals('S')}"><!-- 정찰가 -->
-												<img th:src="${workList.workMainImgUrl}" style="width:100%; height:100%;cursor:pointer;" th:attr="onclick=|workDetail('${workList.dealSq}')|" />
+												<img th:src="${workList.workMainImgUrl}" style="width:100%; height:100%;cursor:pointer;" th:attr="onclick=|workDetail('${workList.workSq}')|" />
 											</th:block>
 											
 											<th:block th:if="${workList.dealTypCd.toString().equals('X')}">
