--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -6583,3 +6583,25 @@ p.dib{display:inline-block !important;}
 .mana-check input[type="checkbox"] + label span{background:none;}
 .mana-check input[type="checkbox"]:checked + label span{background: url(../img/cehck-icon.png);width: 7.4rem;height: 7.4rem;background-size: 100%;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);margin: 0;}
 .mana-check input[type="checkbox"] + label{width: 100%; height: 100%;}
+
+
+/*0901*/
+.call_box {
+    font-size:16px;
+    color:#fff;
+    background: #e9625c;
+    padding: 15px;
+    text-align: left;
+}
+
+.call_box_con1 {
+    font-size:14px;
+    color: #808080;
+    padding: 20px;
+    text-align: left;
+}
+.call_box_con1 > li {
+    list-style: auto;
+    padding: 10px 20px;
+    text-indent : -13px;
+}
