--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5996,3 +5996,25 @@ position: relative;background-color: #fbfbfb;}
 .mana-check input[type="checkbox"] + label span{background:none;}
 .mana-check input[type="checkbox"]:checked + label span{background: url(../img/cehck-icon.png); width: 50px; height: 50px; background-size: 100%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);margin: 0;}
 .mana-check input[type="checkbox"] + label{width: 100%; height: 100%;}
+
+
+/*0901*/
+.call_box {
+    font-size:16px;
+    color:#fff;
+    background: #e9625c;
+    padding: 15px;
+    text-align: left;
+}
+
+.call_box_con1 {
+    font-size:14px;
+    color: #808080;
+    padding: 20px;
+    text-align: left;
+}
+.call_box_con1 > li {
+    list-style: auto;
+    padding: 10px 20px;
+    text-indent : -13px;
+}
