--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -22,7 +22,7 @@
 					<ul class="mypage-ul">
 						<li class="" id="myDeal"><a href="/myDeal">거래 내역</a></li>
 						<li class="" id="coupon"><a href="/coupon">쿠폰</a></li>
-						<li class=""><a href="javascript:fnModalAlert();">문의 내역</a></li>
+						<!-- <li class=""><a href="javascript:fnModalAlert();">문의 내역</a></li> -->
 					</ul>
 				</div>
 			</div>
