--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -478,7 +478,7 @@ function myWorkMod(obj){
 
 function dealReg(obj){
 	var workSq = obj.getAttribute("workSq");
-	location.href = "/dealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal+"&&workTypCd=WORK";
+	location.href = "/dealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal;
 }
 
 $(document).on("click", ".heart", function(){
