--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -6556,3 +6556,6 @@ p.dib{display:inline-block !important;}
 .mana-check input[type="checkbox"] + label span{background:none;}
 .mana-check input[type="checkbox"]:checked + label span{background: url(../img/cehck-icon.png);width: 7.4rem;height: 7.4rem;background-size: 100%;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);margin: 0;}
 .mana-check input[type="checkbox"] + label{width: 100%; height: 100%;}
+.mana-check input[type="radio"] + label span{background:none;}
+.mana-check input[type="radio"]:checked + label span{background: url(../img/cehck-icon.png);width: 7.4rem;height: 7.4rem;background-size: 100%;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);margin: 0;}
+.mana-check input[type="radio"] + label{width: 100%; height: 100%;}
