--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -509,7 +509,7 @@ setInterval(function() {
 		var dday = new Date(elements[i].attributes.dday.value).getTime();
 		var today = new Date().getTime();
 		if(today >= dday){
-			dealSearch();
+			//dealSearch();
 		}
 	  	var gap = dday - today;
 		var day = Math.floor(gap / (1000 * 60 * 60 * 24));
@@ -532,7 +532,7 @@ function collectionMod(obj){
 
 function dealReg(obj){
 	var workSq = obj.getAttribute("workSq");
-	location.href = "/dealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal+"&&workTypCd=COLL";
+	location.href = "/dealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal;
 }
 
 $(document).on("click", ".heart", function(){
