--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -288,10 +288,13 @@ $(function() {
 		artstInfoHtml += '</dl>';
 		}
 		
-		artstInfoHtml += '	<dl class="ad-dl">';
+		artstInfoHtml += '	<dl class="ad-dl" style=" opacity: 0.3;">';
 		artstInfoHtml += '	<dt>학력</dt>';
 		artstInfoHtml += '	<dd>';
-		for(var i=0; i<eductn.length; i++){
+		if(eductn.length > 2) {
+			var eductnLength = 2
+		}
+		for(var i=0; i<eductnLength; i++){
 			artstInfoHtml += '		<p>'+ eductn[i].eductnNm +'</p>';
 		}
 		artstInfoHtml += '	</dd>';
