--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -665,7 +665,7 @@
 										<label for="cbx_bidAgree3"><span></span>
 											<div class="check-info">
 												<p>
-													작품 판매에 대한 수수료가 부과됩니다.
+													작품 구매에 대한 수수료가 부과됩니다.
 													<button id="btn_toggle"><img src="resources/img/ba/me-icon.png"></button>
 												</p>
 											</div>
@@ -674,7 +674,7 @@
 										<!--0830_구매수수료-->
 										<div id="Toggle" style="display:none">
 											<div class="toggle_box1">
-												<div class="toggle_bar1">판매수수료</div>
+												<div class="toggle_bar1">구매수수료</div>
 												<div class="toggle_close" id="toggle_close"><img src="resources/img/ba/icon-end_1.png"></div>
 											</div>
 											<div class="toggle_con1">
