--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -1875,13 +1875,30 @@ $(document).on("click", ".scrap", function(){
 		]
 	});
 });
+
+// function workReg(){
+// 	if(sMbrSqVal == null || sMbrSqVal == ""){
+// 		modalAlertShow("로그인 후 이용할 수 있습니다.", "login");
+// 	}else if(sAuthSqVal != "2"){
+// 		modalAlertShow("작가로 등록된 회원만 이용할 수 있습니다.");
+// 	}else{
+// 		window.location.href = "/myWork_reg";
+// 	}
+// };
+
+
 function workReg(){
 	if(sMbrSqVal == null || sMbrSqVal == ""){
 		modalAlertShow("로그인 후 이용할 수 있습니다.", "login");
-	}else if(sAuthSqVal != "2"){
-		modalAlertShow("작가로 등록된 회원만 이용할 수 있습니다.");
 	}else{
-		window.location.href = "/myWork_reg";
+		//window.location.href = "/myCollection";
+		pageGoPost({
+			url:"/myCollection",
+			target:"_self",
+			vals:[
+				["mbrSq", sMbrSqVal]
+			]
+		});
 	}
 };
 
