--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -6021,3 +6021,19 @@ position: relative;background-color: #fbfbfb;}
     padding: 10px 20px;
     text-indent : -13px;
 }
+
+/*0915*/
+.bat-box6{
+    padding: 0;
+    margin-top: 50px;
+    text-align: center;
+}
+.bat-box6 button{
+    width: 250px;
+    border-radius: 35px;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 11px 0 14px 0;
+    margin-bottom: 13px;
+    max-height: 60px;
+}
