나의작품, 소장품 등록] : 작가/작품 검색 페이지 로고 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -461,7 +461,7 @@
 				<!-- 검색버튼 클릭시 -->
 				<div class="search-show">
 					<div class="sea-box">
-						<img src="resources/img/w-logo.jpg" class="sea-img" />
+						<img src="resources/img/newdalogo.png" class="sea-img" style="width:237px;" />
 						
 						<div class="sea-won">
 							<!-- <div class="select-box">
